--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,44 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      TODO
     </ion-title>
+    <ion-buttons end>
+      <button (click)="toggleReorder()" ion-button *ngIf="!reorderIsEnable">
+        Edit
+      </button>
+      <button (click)="toggleReorder()" ion-button *ngIf="reorderIsEnable">
+        Done
+      </button>
+      <button ion-button (click)="openTodoAlert()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-list [reorder]="reorderIsEnable" (ionItemReorder)="itemReordered($event)">
+    <ion-item-sliding *ngFor="let todo of todos; let todoIndex= index">
+
+        <ion-item-options slide="left">
+            <button ion-button (click)="editTodo(todoIndex)">
+                <ion-icon name="create"></ion-icon>
+            </button>
+          </ion-item-options>
+
+        <ion-item>{{todo}}</ion-item>
+        <!-- <ion-item-options slide="right">
+          <button color="danger" ion-button (click)="archiveTodo(todoIndex)">
+              <ion-icon name="trash"></ion-icon>
+          </button>
+        </ion-item-options> -->
+    </ion-item-sliding>
+  </ion-list>
+
+  <ion-fab right bottom>
+    <button ion-fab (click)="goToArchivePage()">
+      <ion-icon name="archive"></ion-icon>
+    </button>
+  </ion-fab>
 </ion-content>
